huber loss gradient issue fixed

--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 136,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2370,9 +2370,9 @@
     "    # YOUR CODE HERE\n",
     "\n",
     "    error = y - X.dot(theta)\n",
-    "    scaling_factors = (error / (delta**2 * np.sqrt(1 + (error / delta)**2)))\n",
-    "    gradient_vec = -np.mean(X * scaling_factors, axis=0).reshape(-1,1)\n",
-    "    \n",
+    "    scaling_factors = error / np.mean( np.sqrt(1 + (error / delta)**2), axis=0)\n",
+    "    gradient_vec = -(X.T.dot(scaling_factors)).reshape(-1,1)\n",
+    "\n",
     "    #raise NotImplementedError()\n",
     "\n",
     "    if reg_fn != None:\n",
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 134,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2463,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 137,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2483,11 +2483,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Iter 0 (epoch 0)] train loss: 4.75, lr: 0.002000000, theta diff (l2-norm): 0.007591254.\n",
+      "[Iter 0 (epoch 0)] train loss: 4.76, lr: 0.002000000, theta diff (l2-norm): 0.764254904.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.80, lr: 0.000649468, theta diff (l2-norm): 0.131556876.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.83, lr: 0.000539367, theta diff (l2-norm): 0.024944765.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.35, lr: 0.000488873, theta diff (l2-norm): 0.038409897.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.08, lr: 0.000457949, theta diff (l2-norm): 0.051619208.\n",
+      "[Iter 500 (epoch 35)] train loss: 0.98, lr: 0.000436346, theta diff (l2-norm): 0.025561491.\n",
+      "[Iter 600 (epoch 42)] train loss: 0.89, lr: 0.000420062, theta diff (l2-norm): 0.023245449.\n",
       "\n",
-      "Train R^2: -0.835, Val  R^2: -0.801\n",
-      "Train MSE: 639.512, Val MSE: 633.958\n",
-      "Train MAE: 17.908, Val MAE: 17.680\n"
+      "Train R^2: 0.890, Val  R^2: 0.891\n",
+      "Train MSE: 38.227, Val MSE: 38.542\n",
+      "Train MAE: 3.490, Val MAE: 3.468\n"
      ]
     }
    ],
@@ -2537,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 138,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2571,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 124,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2626,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 142,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2645,90 +2651,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Iter 0 (epoch 0)] train loss: 5.04, lr: 0.002000000, theta diff (l2-norm): 0.008002063.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.90, lr: 0.000649468, theta diff (l2-norm): 0.007612885.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.67, lr: 0.000539367, theta diff (l2-norm): 0.010415718.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.55, lr: 0.000488873, theta diff (l2-norm): 0.013160578.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.61, lr: 0.000457949, theta diff (l2-norm): 0.015755325.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.65, lr: 0.000436346, theta diff (l2-norm): 0.018185311.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.59, lr: 0.000420062, theta diff (l2-norm): 0.020432843.\n",
-      "[i: 0] -- Lambda: 0.000, L2-norm of w: 1.711\n",
-      "Train R^2: -0.870, Val  R^2: -0.837\n",
-      "Train MSE: 651.707, Val MSE: 646.622\n",
-      "Train MAE: 18.278, Val MAE: 18.091\n",
+      "[Iter 0 (epoch 0)] train loss: 4.72, lr: 0.002000000, theta diff (l2-norm): 0.689587972.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.79, lr: 0.000649468, theta diff (l2-norm): 0.148214591.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.81, lr: 0.000539367, theta diff (l2-norm): 0.066977241.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.31, lr: 0.000488873, theta diff (l2-norm): 0.037789894.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.06, lr: 0.000457949, theta diff (l2-norm): 0.037299697.\n",
+      "[Iter 500 (epoch 35)] train loss: 0.96, lr: 0.000436346, theta diff (l2-norm): 0.039130936.\n",
+      "[Iter 600 (epoch 42)] train loss: 0.91, lr: 0.000420062, theta diff (l2-norm): 0.020164891.\n",
+      "[i: 0] -- Lambda: 0.000, L2-norm of w: 17.066\n",
+      "Train R^2: 0.890, Val  R^2: 0.890\n",
+      "Train MSE: 38.227, Val MSE: 38.550\n",
+      "Train MAE: 3.488, Val MAE: 3.466\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 4.69, lr: 0.002000000, theta diff (l2-norm): 0.006765470.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.66, lr: 0.000649468, theta diff (l2-norm): 0.006734572.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.69, lr: 0.000539367, theta diff (l2-norm): 0.009259806.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.62, lr: 0.000488873, theta diff (l2-norm): 0.011691126.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.72, lr: 0.000457949, theta diff (l2-norm): 0.014042829.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.68, lr: 0.000436346, theta diff (l2-norm): 0.016372625.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.68, lr: 0.000420062, theta diff (l2-norm): 0.018623963.\n",
-      "[i: 1] -- Lambda: 0.010, L2-norm of w: 2.120\n",
-      "Train R^2: -0.903, Val  R^2: -0.880\n",
-      "Train MSE: 663.202, Val MSE: 661.712\n",
-      "Train MAE: 18.412, Val MAE: 18.222\n",
+      "[Iter 0 (epoch 0)] train loss: 4.39, lr: 0.002000000, theta diff (l2-norm): 0.751661760.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.61, lr: 0.000649468, theta diff (l2-norm): 0.129756392.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.73, lr: 0.000539367, theta diff (l2-norm): 0.047906018.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.33, lr: 0.000488873, theta diff (l2-norm): 0.045431329.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.07, lr: 0.000457949, theta diff (l2-norm): 0.038837282.\n",
+      "[Iter 500 (epoch 35)] train loss: 0.93, lr: 0.000436346, theta diff (l2-norm): 0.020368707.\n",
+      "[Iter 600 (epoch 42)] train loss: 0.85, lr: 0.000420062, theta diff (l2-norm): 0.020649604.\n",
+      "[i: 1] -- Lambda: 0.010, L2-norm of w: 17.068\n",
+      "Train R^2: 0.890, Val  R^2: 0.891\n",
+      "Train MSE: 38.227, Val MSE: 38.548\n",
+      "Train MAE: 3.491, Val MAE: 3.469\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 4.78, lr: 0.002000000, theta diff (l2-norm): 0.007352100.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.85, lr: 0.000649468, theta diff (l2-norm): 0.007058779.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.76, lr: 0.000539367, theta diff (l2-norm): 0.009790581.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.71, lr: 0.000488873, theta diff (l2-norm): 0.012392978.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.55, lr: 0.000457949, theta diff (l2-norm): 0.014761913.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.64, lr: 0.000436346, theta diff (l2-norm): 0.017204042.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.53, lr: 0.000420062, theta diff (l2-norm): 0.019354576.\n",
-      "[i: 2] -- Lambda: 0.100, L2-norm of w: 1.883\n",
-      "Train R^2: -0.981, Val  R^2: -0.941\n",
-      "Train MSE: 690.316, Val MSE: 683.205\n",
-      "Train MAE: 18.445, Val MAE: 18.184\n",
+      "[Iter 0 (epoch 0)] train loss: 4.96, lr: 0.002000000, theta diff (l2-norm): 0.716636420.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.94, lr: 0.000649468, theta diff (l2-norm): 0.158232104.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.87, lr: 0.000539367, theta diff (l2-norm): 0.057689588.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.34, lr: 0.000488873, theta diff (l2-norm): 0.040312650.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.08, lr: 0.000457949, theta diff (l2-norm): 0.025839701.\n",
+      "[Iter 500 (epoch 35)] train loss: 0.95, lr: 0.000436346, theta diff (l2-norm): 0.028505860.\n",
+      "[Iter 600 (epoch 42)] train loss: 0.87, lr: 0.000420062, theta diff (l2-norm): 0.017450682.\n",
+      "[i: 2] -- Lambda: 0.100, L2-norm of w: 17.033\n",
+      "Train R^2: 0.890, Val  R^2: 0.891\n",
+      "Train MSE: 38.227, Val MSE: 38.543\n",
+      "Train MAE: 3.488, Val MAE: 3.466\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 4.64, lr: 0.002000000, theta diff (l2-norm): 0.008774112.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.69, lr: 0.000649468, theta diff (l2-norm): 0.008568540.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.70, lr: 0.000539367, theta diff (l2-norm): 0.011305621.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.70, lr: 0.000488873, theta diff (l2-norm): 0.014036607.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.67, lr: 0.000457949, theta diff (l2-norm): 0.016411708.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.62, lr: 0.000436346, theta diff (l2-norm): 0.018646966.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.73, lr: 0.000420062, theta diff (l2-norm): 0.020892705.\n",
-      "[i: 3] -- Lambda: 1.000, L2-norm of w: 1.264\n",
-      "Train R^2: -0.948, Val  R^2: -0.908\n",
-      "Train MSE: 678.969, Val MSE: 671.821\n",
-      "Train MAE: 18.244, Val MAE: 17.957\n",
+      "[Iter 0 (epoch 0)] train loss: 4.75, lr: 0.002000000, theta diff (l2-norm): 0.722762503.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.83, lr: 0.000649468, theta diff (l2-norm): 0.177639497.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.82, lr: 0.000539367, theta diff (l2-norm): 0.055688100.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.33, lr: 0.000488873, theta diff (l2-norm): 0.045124745.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.07, lr: 0.000457949, theta diff (l2-norm): 0.032435836.\n",
+      "[Iter 500 (epoch 35)] train loss: 0.95, lr: 0.000436346, theta diff (l2-norm): 0.047945913.\n",
+      "[Iter 600 (epoch 42)] train loss: 0.87, lr: 0.000420062, theta diff (l2-norm): 0.018132683.\n",
+      "[i: 3] -- Lambda: 1.000, L2-norm of w: 16.773\n",
+      "Train R^2: 0.890, Val  R^2: 0.890\n",
+      "Train MSE: 38.296, Val MSE: 38.575\n",
+      "Train MAE: 3.491, Val MAE: 3.462\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 4.71, lr: 0.002000000, theta diff (l2-norm): 0.043860569.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.70, lr: 0.000649468, theta diff (l2-norm): 0.016724946.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.77, lr: 0.000539367, theta diff (l2-norm): 0.014607984.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.61, lr: 0.000488873, theta diff (l2-norm): 0.013755377.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.60, lr: 0.000457949, theta diff (l2-norm): 0.014203969.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.55, lr: 0.000436346, theta diff (l2-norm): 0.015060838.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.55, lr: 0.000420062, theta diff (l2-norm): 0.016516366.\n",
-      "[i: 4] -- Lambda: 10.000, L2-norm of w: 0.156\n",
-      "Train R^2: -0.900, Val  R^2: -0.865\n",
-      "Train MSE: 662.355, Val MSE: 656.642\n",
-      "Train MAE: 18.079, Val MAE: 17.847\n",
+      "[Iter 0 (epoch 0)] train loss: 4.81, lr: 0.002000000, theta diff (l2-norm): 0.719240976.\n",
+      "[Iter 100 (epoch 7)] train loss: 2.94, lr: 0.000649468, theta diff (l2-norm): 0.141105586.\n",
+      "[Iter 200 (epoch 14)] train loss: 1.96, lr: 0.000539367, theta diff (l2-norm): 0.031121523.\n",
+      "[Iter 300 (epoch 21)] train loss: 1.47, lr: 0.000488873, theta diff (l2-norm): 0.031520229.\n",
+      "[Iter 400 (epoch 28)] train loss: 1.21, lr: 0.000457949, theta diff (l2-norm): 0.030459248.\n",
+      "[Iter 500 (epoch 35)] train loss: 1.09, lr: 0.000436346, theta diff (l2-norm): 0.033723149.\n",
+      "[Iter 600 (epoch 42)] train loss: 1.03, lr: 0.000420062, theta diff (l2-norm): 0.019880282.\n",
+      "[i: 4] -- Lambda: 10.000, L2-norm of w: 14.302\n",
+      "Train R^2: 0.872, Val  R^2: 0.873\n",
+      "Train MSE: 44.732, Val MSE: 44.791\n",
+      "Train MAE: 4.149, Val MAE: 4.092\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 4.75, lr: 0.002000000, theta diff (l2-norm): 0.527408412.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.64, lr: 0.000649468, theta diff (l2-norm): 0.005909283.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.62, lr: 0.000539367, theta diff (l2-norm): 0.007866363.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.50, lr: 0.000488873, theta diff (l2-norm): 0.009771983.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.30, lr: 0.000457949, theta diff (l2-norm): 0.011294288.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.35, lr: 0.000436346, theta diff (l2-norm): 0.012987352.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.32, lr: 0.000420062, theta diff (l2-norm): 0.014488378.\n",
-      "[i: 5] -- Lambda: 100.000, L2-norm of w: 0.020\n",
-      "Train R^2: -0.865, Val  R^2: -0.831\n",
-      "Train MSE: 650.213, Val MSE: 644.630\n",
-      "Train MAE: 17.813, Val MAE: 17.576\n",
+      "[Iter 0 (epoch 0)] train loss: 4.80, lr: 0.002000000, theta diff (l2-norm): 0.802585881.\n",
+      "[Iter 100 (epoch 7)] train loss: 3.86, lr: 0.000649468, theta diff (l2-norm): 0.112322324.\n",
+      "[Iter 200 (epoch 14)] train loss: 3.36, lr: 0.000539367, theta diff (l2-norm): 0.040518971.\n",
+      "[Iter 300 (epoch 21)] train loss: 3.14, lr: 0.000488873, theta diff (l2-norm): 0.023486352.\n",
+      "[Iter 400 (epoch 28)] train loss: 3.06, lr: 0.000457949, theta diff (l2-norm): 0.021606228.\n",
+      "[Iter 500 (epoch 35)] train loss: 2.99, lr: 0.000436346, theta diff (l2-norm): 0.028998285.\n",
+      "[Iter 600 (epoch 42)] train loss: 2.96, lr: 0.000420062, theta diff (l2-norm): 0.021264180.\n",
+      "[i: 5] -- Lambda: 100.000, L2-norm of w: 3.211\n",
+      "Train R^2: 0.329, Val  R^2: 0.328\n",
+      "Train MSE: 233.911, Val MSE: 236.436\n",
+      "Train MAE: 11.968, Val MAE: 11.974\n",
       "\n",
-      "[Iter 0 (epoch 0)] train loss: 5.00, lr: 0.002000000, theta diff (l2-norm): 4.040340615.\n",
-      "[Iter 100 (epoch 7)] train loss: 4.99, lr: 0.000649468, theta diff (l2-norm): 0.007763696.\n",
-      "[Iter 200 (epoch 14)] train loss: 4.99, lr: 0.000539367, theta diff (l2-norm): 0.010684778.\n",
-      "[Iter 300 (epoch 21)] train loss: 4.93, lr: 0.000488873, theta diff (l2-norm): 0.013405176.\n",
-      "[Iter 400 (epoch 28)] train loss: 4.75, lr: 0.000457949, theta diff (l2-norm): 0.015790827.\n",
-      "[Iter 500 (epoch 35)] train loss: 4.78, lr: 0.000436346, theta diff (l2-norm): 0.017698554.\n",
-      "[Iter 600 (epoch 42)] train loss: 4.64, lr: 0.000420062, theta diff (l2-norm): 0.019439768.\n",
-      "[i: 6] -- Lambda: 1000.000, L2-norm of w: 0.001\n",
-      "Train R^2: -1.021, Val  R^2: -0.983\n",
-      "Train MSE: 704.497, Val MSE: 698.125\n",
-      "Train MAE: 18.909, Val MAE: 18.650\n",
-      "\n"
+      "[Iter 0 (epoch 0)] train loss: 4.85, lr: 0.002000000, theta diff (l2-norm): 4.077661842.\n",
+      "[Iter 100 (epoch 7)] train loss: 4.11, lr: 0.000649468, theta diff (l2-norm): 0.120109499.\n",
+      "[Iter 200 (epoch 14)] train loss: 3.77, lr: 0.000539367, theta diff (l2-norm): 0.072938458.\n",
+      "[Iter 300 (epoch 21)] train loss: 3.65, lr: 0.000488873, theta diff (l2-norm): 0.036914391.\n",
+      "[Iter 400 (epoch 28)] train loss: 3.53, lr: 0.000457949, theta diff (l2-norm): 0.033119080.\n",
+      "[Iter 500 (epoch 35)] train loss: 3.57, lr: 0.000436346, theta diff (l2-norm): 0.029713150.\n",
+      "[Iter 600 (epoch 42)] train loss: 3.60, lr: 0.000420062, theta diff (l2-norm): 0.025076418.\n",
+      "[i: 6] -- Lambda: 1000.000, L2-norm of w: 0.330\n",
+      "Train R^2: 0.038, Val  R^2: 0.038\n",
+      "Train MSE: 335.381, Val MSE: 338.841\n",
+      "Train MAE: 14.388, Val MAE: 14.399\n",
+      "\n",
+      "Best Lambda: 0.100\n"
      ]
     }
    ],
@@ -2769,10 +2776,13 @@
     "    performance_metrics = r2_mse_mae_eval(model_dc['theta'], train_x, train_y, val_x, val_y)\n",
     "    print()\n",
     "\n",
+    "    # YOUR CODE HERE\n",
     "    val_mse = performance_metrics[3]\n",
     "    if val_mse < best_performance:\n",
     "        best_performance = val_mse\n",
-    "        best_lmbda = lmbda"
+    "        best_lmbda = lmbda\n",
+    "print('Best Lambda: {:.3f}'.format(best_lmbda))\n",
+    "    #raise NotImplementedError()"
    ]
   },
   {
@@ -2845,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2941,7 +2951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2956,11 +2966,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: We need to do feature scaling before applying PCA. Because it leads to a more balanced representation of the data's structure, where all features have an opportunity to contribute to the principal components equally. For example, here, only one feature has captured the variance of unscaled data  \n",
+    "## Answer: We need to do feature scaling before applying PCA. This leads to a more balanced representation of the data's distribution/structure, where all features have an equal opportunity to contribute to the principal components. More specifically, it allows features with minor variance (which might contain important information) to contribute more equally. \n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
