--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_18946/1989827619.py:7: DeprecationWarning: \n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_20412/1989827619.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -2849,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2901,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2964,7 +2964,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\""
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
@@ -3017,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -3031,7 +3042,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hansika/Documents/MLE/env/mle/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Note: do *not* import or use tensorflow before this point (i.e., before task 5) or automated tests will fail causing you to lose points!\n",
     "import tensorflow as tf \n",
@@ -3045,7 +3065,9 @@
     "    assert theta.shape == (m,1)\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    y = y.reshape(-1,1)\n",
+    "    loss_val = np.mean(np.abs(X.dot(theta) - y))\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    assert loss_val.shape == ()\n",
     "    return loss_val\n",
@@ -3064,7 +3086,12 @@
     "    ### Use GradientTape to compute the gradient. Hint: use tf.reduce_mean().\n",
     "    ###* put your code here (~3-5 lines) *###\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y_pred = tf.matmul(X, theta_tensor)\n",
+    "        loss_val = tf.reduce_mean(tf.abs(y - y_pred))\n",
+    "        \n",
+    "    gradient_vec = tape.gradient(loss_val, theta_tensor)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    assert isinstance(gradient_vec, tf.Tensor)\n",
     "    gradient_vec = gradient_vec.numpy()\n",
@@ -3073,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -3089,7 +3116,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Iter 0 (epoch 0)] train loss: 18.49, lr: 0.800000000, theta diff (l2-norm): 0.800000000.\n",
+      "[Iter 100 (epoch 7)] train loss: 10.79, lr: 0.259787364, theta diff (l2-norm): 0.350089622.\n",
+      "[Iter 200 (epoch 14)] train loss: 6.92, lr: 0.215746809, theta diff (l2-norm): 0.301536323.\n",
+      "[Iter 300 (epoch 21)] train loss: 5.09, lr: 0.195549181, theta diff (l2-norm): 0.240323901.\n",
+      "[Iter 400 (epoch 28)] train loss: 4.28, lr: 0.183179714, theta diff (l2-norm): 0.254678742.\n",
+      "[Iter 500 (epoch 35)] train loss: 3.73, lr: 0.174538386, theta diff (l2-norm): 0.209953125.\n",
+      "[Iter 600 (epoch 42)] train loss: 3.39, lr: 0.168024864, theta diff (l2-norm): 0.239726282.\n",
+      "\n",
+      "Train R^2: 0.877, Val  R^2: 0.876\n",
+      "Train MSE: 42.858, Val MSE: 43.589\n",
+      "Train MAE: 3.132, Val MAE: 3.175\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Check 5a completed. \"\"\"\n",
     "\n",
