--- a/HW/hw2/hw2.ipynb
+++ b/HW/hw2/hw2.ipynb
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_77140/1989827619.py:7: DeprecationWarning: \n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_16688/1989827619.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -1335,7 +1335,7 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: The model is fairly good since R^2 scores are closer to 1. However there seems to be space for improvement when looking at the MSE and MAE values. Furthermore, the model seems not to generalize well without overfitting.\n",
+    "## Answer: The model is fairly good since R^2 scores are closer to 1 and perform better than the mean model if we consider it the baseline. However, there seems to be space for improvement when also looking at the MSE and MAE values. Furthermore, the model seems to generalize well without overfitting.\n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -2214,7 +2214,7 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: No, it does not seem to be overfitted. The regularized model is better than the models trained in task 2 and 3.\n",
+    "## Answer: No, it does not seem to be overfitted because train and validation errors/scores are similar. The regularized model is better than the models trained in task 2 and 3.\n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -2389,9 +2389,10 @@
     "\"\"\" Remove the 'raise NotImplementedError' line. Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
     "## Answer: \n",
-    "# 1. No, they perform equally. This is because linear regression is a model with low variance (they are not sensitive to small variances in the dataset) and bagging is effective with models that have high variance. Bagging does not improve bias to make linear regression model better.\n",
+    "# 1. No, they perform equally. This is because linear regression is a model with low variance (they are not sensitive to small variances in the dataset) and bagging is effective with models that have high variance. Bagging does not improve bias to make the linear regression model better.\n",
     "#\n",
     "# 2. Random forest is the best model out of all the models trained for this problem so far.\n",
+    "#\n",
     "# YOUR CODE HERE\n",
     "#raise NotImplementedError()"
    ]
@@ -2657,7 +2658,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] R^2: 0.890, MSE: 3678.8, MAE: 39.9 [Elapsed: 18.5 seconds]\n"
+      "[Val] R^2: 0.890, MSE: 3678.8, MAE: 39.9 [Elapsed: 18.1 seconds]\n"
      ]
     }
    ],
@@ -2799,7 +2800,7 @@
     "#raise NotImplementedError()\n",
     "print('[Val] R^2: {:.3f}, MSE: {:.1f}, MAE: {:.1f} [Best hyperparams: {}, {}]'.format(val_r2, val_mse, val_mae, best_num_weak_learners, best_num_sel_features))\n",
     "\n",
-    "# Answer: This model is better than all the previous models in the homework"
+    "# Answer: This model is better than all the previous models in the homework."
    ]
   },
   {
