--- a/HW/hw3/hw3.ipynb
+++ b/HW/hw3/hw3.ipynb
@@ -303,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_20412/1989827619.py:7: DeprecationWarning: \n",
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_20987/1989827619.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -2031,7 +2031,7 @@
     }
    ],
    "source": [
-    "## This code is written for test bgd and sgd for different learning rates, and then to choose appropriate learning rate\n",
+    "## This is a newly introduced Cell that is written for test bgd and sgd for different learning rates, and then to choose the appropriate learning rate\n",
     "\n",
     "def run_for_multiple_lr(batch_size, lr_values):\n",
     "    print('for batch size :', batch_size)\n",
