fix issue with with training due to large training rate

--- a/HW/hw4/hw4.ipynb
+++ b/HW/hw4/hw4.ipynb
@@ -1369,7 +1369,7 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    name = 'Model1--Fixed' if fixed else 'Model1--Broken'\n",
     "    hidden_widths=[256, 128, 48]\n",
@@ -1384,7 +1384,7 @@
     "                                     bias_initializer=keras.initializers.Zeros(), use_bias=False))\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    model.add(keras.layers.Dense(num_outputs, activation='softmax', name='output',\n",
     "                                kernel_initializer=keras.initializers.RandomNormal(stddev=np.sqrt(0.1)),\n",
@@ -1392,8 +1392,10 @@
     "    \n",
     "    opt = keras.optimizers.Adam(learning_rate=0.1)\n",
     "\n",
+    "    if fixed:\n",
+    "        opt = keras.optimizers.Adam(learning_rate=0.002)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    if verbose:\n",
     "        model.summary()\n",
