fix the issue with too low learning rate

--- a/HW/hw4/hw4.ipynb
+++ b/HW/hw4/hw4.ipynb
@@ -1646,10 +1646,10 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The learning rate for the Adam optimizer was too large so that it could not converge to a solution. A smaller learning rate eventually allowed the model to converge to a solution that has a better accuray.\n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "#"
    ]
   },
@@ -1702,7 +1702,7 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    name = 'Model2--Fixed' if fixed else 'Model2--Broken'\n",
     "    hidden_widths=[400, 96]\n",
@@ -1716,16 +1716,20 @@
     "                                     use_bias=True))\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    model.add(keras.layers.Dense(num_outputs, activation='softmax', name='output', use_bias=False))\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    opt = keras.optimizers.RMSprop(learning_rate=1e-8)\n",
+    "\n",
+    "    if fixed:\n",
+    "        opt = keras.optimizers.RMSprop(learning_rate=0.001)\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    if verbose:\n",
     "        model.summary()\n",
@@ -1897,10 +1901,10 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The learning rate was extreemly small, which results in model converging extreemly slowly. Therefore, with the given number of epochs model could not reach a low enough loss value to get a good accuracy.\n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "#"
    ]
   },
