fix the issue of using tanh for output layer instead of softmax

--- a/HW/hw4/hw4.ipynb
+++ b/HW/hw4/hw4.ipynb
@@ -1977,13 +1977,13 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    name = 'Model3--Fixed' if fixed else 'Model3--Broken'\n",
     "    hidden_widths=[512, 128, 32, 24]\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    model = keras.models.Sequential(name=name)\n",
     "    \n",
@@ -1993,10 +1993,14 @@
     "        model.add(keras.layers.Dense(hw, activation='relu', name='hidden_{}'.format(i), \n",
     "                                     bias_initializer=keras.initializers.RandomNormal(stddev=0.001), use_bias=True))\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    if not fixed:\n",
     "        model.add(keras.layers.Dense(num_outputs, activation='tanh', name='output',\n",
+    "                                kernel_initializer=keras.initializers.RandomNormal(stddev=np.sqrt(0.1)),\n",
+    "                                bias_initializer=keras.initializers.Zeros(), use_bias=True))\n",
+    "    else:\n",
+    "        model.add(keras.layers.Dense(num_outputs, activation='softmax', name='output',\n",
     "                                kernel_initializer=keras.initializers.RandomNormal(stddev=np.sqrt(0.1)),\n",
     "                                bias_initializer=keras.initializers.Zeros(), use_bias=True))\n",
     "    \n",
@@ -2170,10 +2174,10 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The output layer of the model was using 'tanh' activation function instead of 'softmax' activation function which resulted in the model not being able to learn the data well and hence the accuracy was low. The tanh function outputs values in the range [-1, 1], which is not suitable for multi-class classification tasks where the output is expected to represent probabilities summing to 1 for each class. \n",
     "#\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "#"
    ]
   },
