fix the issue with bottlenecking by small intermidiate layer

--- a/HW/hw4/hw4.ipynb
+++ b/HW/hw4/hw4.ipynb
@@ -2230,13 +2230,16 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    name = 'Model4--Fixed' if fixed else 'Model4--Broken'\n",
     "    hidden_widths=[512, 128, 3, 24]\n",
     "\n",
+    "    if fixed:\n",
+    "        hidden_widths=[512, 128, 32, 24]\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    model = keras.models.Sequential(name=name)\n",
     "    \n",
@@ -2246,7 +2249,7 @@
     "        model.add(keras.layers.Dense(hw, activation='relu', name='hidden_{}'.format(i)))\n",
     "        \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    model.add(keras.layers.Dense(num_outputs, activation='softmax', name='output',\n",
     "                                kernel_initializer=keras.initializers.RandomNormal(stddev=np.sqrt(0.1)),\n",
@@ -2255,7 +2258,7 @@
     "    opt = keras.optimizers.Nadam(learning_rate=0.001)\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    if verbose:\n",
     "        model.summary()\n",
@@ -2425,7 +2428,7 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: \n",
+    "## Answer: The number of hidden units in the third hidden layer was set to 3 which is too small. Since the proceeding layer has more neurons(24) using 3 neurons at 3rd layer act as a bottleneck for the flow of information, potentially impairing the model's ability to learn complex patterns effectively.\n",
     "#\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
